[package]
name = "coaxial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "^1.37", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
